Getter/Setter 매크로 추가, 카메라 컴포넌트 작성 중

--- a/study/20170831_StarCraftMinigame/Dx3D/Dx3D.vcxproj
+++ b/study/20170831_StarCraftMinigame/Dx3D/Dx3D.vcxproj
@@ -81,6 +81,7 @@
     <None Include="small.ico" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="CameraComponent.h" />
     <ClInclude Include="ColliderBase.h" />
     <ClInclude Include="ComponentBase.h" />
     <ClInclude Include="CRC32.h" />
@@ -96,6 +97,7 @@
     <ClInclude Include="STLUtils.h" />
     <ClInclude Include="TextureManager.h" />
     <ClInclude Include="Vector3.h" />
+    <ClInclude Include="Viewport.h" />
     <ClInclude Include="WindowSystem.h" />
     <ClInclude Include="GameWorld.h" />
     <ClInclude Include="GiveDamage.h" />
@@ -113,6 +115,7 @@
     <ClInclude Include="TransformComponent.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="CameraComponent.cpp" />
     <ClCompile Include="ColliderBase.cpp" />
     <ClCompile Include="ComponentBase.cpp" />
     <ClCompile Include="CRC32.cpp" />
