--- a/study/20170831_StarCraftMinigame/Dx3D/Dx3D.vcxproj
+++ b/study/20170831_StarCraftMinigame/Dx3D/Dx3D.vcxproj
@@ -93,6 +93,8 @@
     <ClInclude Include="HashStringID.h" />
     <ClInclude Include="Math.h" />
     <ClInclude Include="Matrix.h" />
+    <ClInclude Include="MessageManager.h" />
+    <ClInclude Include="PhysicsSystem.h" />
     <ClInclude Include="Quaternion.h" />
     <ClInclude Include="STLUtils.h" />
     <ClInclude Include="TextureManager.h" />
@@ -125,6 +127,8 @@
     <ClCompile Include="GameObjectManager.cpp" />
     <ClCompile Include="HashStringID.cpp" />
     <ClCompile Include="Matrix.cpp" />
+    <ClCompile Include="MessageManager.cpp" />
+    <ClCompile Include="PhysicsSystem.cpp" />
     <ClCompile Include="Quaternion.cpp" />
     <ClCompile Include="TextureManager.cpp" />
     <ClCompile Include="Vector3.cpp" />
