--- a/study/20170831_StarCraftMinigame/Dx3D/Dx3D.vcxproj.filters
+++ b/study/20170831_StarCraftMinigame/Dx3D/Dx3D.vcxproj.filters
@@ -150,6 +150,12 @@
     <ClInclude Include="Viewport.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
+    <ClInclude Include="PhysicsSystem.h">
+      <Filter>System</Filter>
+    </ClInclude>
+    <ClInclude Include="MessageManager.h">
+      <Filter>Manager</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="ColliderBase.cpp">
@@ -229,6 +235,12 @@
     </ClCompile>
     <ClCompile Include="CameraComponent.cpp">
       <Filter>Component</Filter>
+    </ClCompile>
+    <ClCompile Include="PhysicsSystem.cpp">
+      <Filter>System</Filter>
+    </ClCompile>
+    <ClCompile Include="MessageManager.cpp">
+      <Filter>Manager</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
