HashString클래스 이름 변경

--- a/study/20170831_StarCraftMinigame/Dx3D/Dx3D.vcxproj
+++ b/study/20170831_StarCraftMinigame/Dx3D/Dx3D.vcxproj
@@ -90,13 +90,14 @@
     <ClInclude Include="FreqEstimater.h" />
     <ClInclude Include="GameObject.h" />
     <ClInclude Include="GameObjectManager.h" />
-    <ClInclude Include="HashStringID.h" />
+    <ClInclude Include="HashedString.h" />
     <ClInclude Include="Math.h" />
     <ClInclude Include="Matrix.h" />
     <ClInclude Include="MessageManager.h" />
     <ClInclude Include="PhysicsSystem.h" />
     <ClInclude Include="Quaternion.h" />
     <ClInclude Include="STLUtils.h" />
+    <ClInclude Include="HashOnlyString.h" />
     <ClInclude Include="TextureManager.h" />
     <ClInclude Include="Vector3.h" />
     <ClInclude Include="Viewport.h" />
@@ -125,11 +126,12 @@
     <ClCompile Include="EnemyRespawner.cpp" />
     <ClCompile Include="GameObject.cpp" />
     <ClCompile Include="GameObjectManager.cpp" />
-    <ClCompile Include="HashStringID.cpp" />
+    <ClCompile Include="HashedString.cpp" />
     <ClCompile Include="Matrix.cpp" />
     <ClCompile Include="MessageManager.cpp" />
     <ClCompile Include="PhysicsSystem.cpp" />
     <ClCompile Include="Quaternion.cpp" />
+    <ClCompile Include="HashOnlyString.cpp" />
     <ClCompile Include="TextureManager.cpp" />
     <ClCompile Include="Vector3.cpp" />
     <ClCompile Include="WindowSystem.cpp" />
