--- a/study/StudyScene/Dx3D/Dx3D.vcxproj.filters
+++ b/study/StudyScene/Dx3D/Dx3D.vcxproj.filters
@@ -153,6 +153,9 @@
     <ClInclude Include="cRawLoader.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
+    <ClInclude Include="cSceneManager.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
@@ -273,6 +276,9 @@
       <Filter>소스 파일</Filter>
     </ClCompile>
     <ClCompile Include="cRawLoader.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="cSceneManager.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
   </ItemGroup>
