--- a/study/StudyScene/Dx3D/Dx3D.vcxproj
+++ b/study/StudyScene/Dx3D/Dx3D.vcxproj
@@ -98,8 +98,10 @@
     <ClInclude Include="cFrame.h" />
     <ClInclude Include="cFrustum.h" />
     <ClInclude Include="cGameObject.h" />
+    <ClInclude Include="cGameScene.h" />
     <ClInclude Include="cGrid.h" />
     <ClInclude Include="cGroup.h" />
+    <ClInclude Include="cHeightMap.h" />
     <ClInclude Include="cKeyManager.h" />
     <ClInclude Include="cLerp.h" />
     <ClInclude Include="cMainGame.h" />
@@ -112,6 +114,7 @@
     <ClInclude Include="cRawLoader.h" />
     <ClInclude Include="cRay.h" />
     <ClInclude Include="cSceneManager.h" />
+    <ClInclude Include="cSceneTest.h" />
     <ClInclude Include="cSkinnedMesh.h" />
     <ClInclude Include="cSkinnedMeshManager.h" />
     <ClInclude Include="cTerrain.h" />
@@ -143,8 +146,10 @@
     <ClCompile Include="cFrame.cpp" />
     <ClCompile Include="cFrustum.cpp" />
     <ClCompile Include="cGameObject.cpp" />
+    <ClCompile Include="cGameScene.cpp" />
     <ClCompile Include="cGrid.cpp" />
     <ClCompile Include="cGroup.cpp" />
+    <ClCompile Include="cHeightMap.cpp" />
     <ClCompile Include="cKeyManager.cpp" />
     <ClCompile Include="cLerp.cpp" />
     <ClCompile Include="cMainGame.cpp" />
@@ -157,6 +162,7 @@
     <ClCompile Include="cRawLoader.cpp" />
     <ClCompile Include="cRay.cpp" />
     <ClCompile Include="cSceneManager.cpp" />
+    <ClCompile Include="cSceneTest.cpp" />
     <ClCompile Include="cSkinnedMesh.cpp" />
     <ClCompile Include="cSkinnedMeshManager.cpp" />
     <ClCompile Include="cTerrain.cpp" />
